--- a/Oracle_Chrome_Extension/options/options.html
+++ b/Oracle_Chrome_Extension/options/options.html
@@ -21,22 +21,16 @@
 <body>
     <div class="container">
         <ul class="options_list">
-            <li id="CG_IP">
-                <label class="option_tag">IP: </label><input type="text" name="cg_ip" id="cg_ip" placeholder="192.168.70.9">
-            </li>
-            <li id="CG_Port">
-                <label class="option_tag">Port: </label><input type="number" name="cg_port" id="cg_port" placeholder="8080">
-            </li>
-            <li id="CG_Channel">
-                <label class="option_tag">Channel: </label><input type="number" name="cg_channel" id="cg_channel" placeholder="2">
+            <li id="CG_Selection">
+                <label class="option_tag">CG: </label><input type="number" name="cg_selection" id="cg_selection">
             </li>
             <li id="CG_Layer">
-                <label class="option_tag">Layer: </label><input type="number" name="cg_layer" id="cg_layer" placeholder="60">
+                <label class="option_tag">Layer: </label><input type="number" name="cg_layer" id="cg_layer">
             </li>
         </ul>
         
-        <div id="status"></div>
         <button id="save">Save</button>
+        <div id="status"></div>
 
     </div>
     <script src="options.js"></script>
