Changed Extension to use Oracle websocket to communicate with CG

--- a/Oracle_Chrome_Extension/options/options.html
+++ b/Oracle_Chrome_Extension/options/options.html
@@ -22,7 +22,7 @@
     <div class="container">
         <ul class="options_list">
             <li id="CG_Selection">
-                <label class="option_tag">CG: </label><input type="number" name="cg_selection" id="cg_selection">
+                <label class="option_tag">Channel: </label><input type="number" name="cg_channel" id="cg_channel">
             </li>
             <li id="CG_Layer">
                 <label class="option_tag">Layer: </label><input type="number" name="cg_layer" id="cg_layer">
@@ -33,6 +33,11 @@
         <div id="status"></div>
 
     </div>
+
     <script src="options.js"></script>
+
 </body>
 </html>
+
+
+<!-- ALSO NEED TO MAKE IT LOOK GOOD -->
